k8s/base/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: devops-shop
spec:
  selector: { app: frontend }
  ports: [{ port: 80, targetPort: 80 }]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: devops-shop
spec:
  replicas: 2
  selector:
    matchLabels: { app: frontend }
  template:
    metadata:
      labels: { app: frontend }
    spec:
      containers:
        - name: frontend
          image: 029633610454.dkr.ecr.us-east-1.amazonaws.com/devops-shop/frontend:1ce8a4b0c252
          ports: [{ containerPort: 80 }]
          readinessProbe: { httpGet: { path: /, port: 80 }, initialDelaySeconds: 5 }
          livenessProbe: { httpGet: { path: /, port: 80 }, initialDelaySeconds: 15 }
