k8s/base/product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: devops-shop
  labels: { app: product-service }
spec:
  selector: { app: product-service }
  ports: [{ name: http, port: 3001, targetPort: http }]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: devops-shop
spec:
  replicas: 2
  selector:
    matchLabels: { app: product-service }
  template:
    metadata:
      labels: { app: product-service }
    spec:
      containers:
        - name: product-service
          image: 029633610454.dkr.ecr.us-east-1.amazonaws.com/devops-shop/product-service:1ce8a4b0c252
          ports: [{ name: http, containerPort: 3001 }]
          readinessProbe: { httpGet: { path: /health, port: 3001 }, initialDelaySeconds: 5 }
          livenessProbe: { httpGet: { path: /health, port: 3001 }, initialDelaySeconds: 15 }
